# TECCODE

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
teccode/: task_1.py  task_2.py  task_3.py  task_4.py
tests/: conftest.py  test_task_1.py  test_task_2.py  test_task_3.py  test_task_4.py
