[tool.poetry]
name = "teccode"
version = "0.1.0"
description = ""
authors = ["Ilin Sergey <ilin_sergey90@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
pre-commit = "^3.7.0"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
